# flashcard-optimiser

./: .gitignore  Makefile  cleanup.py  main.py  pyproject.toml
flashcard_atomiser/: anki.py  gemini.py
flashcard_optimiser/: __init__.py
