[tool.poetry]
name = "flashcard-atomiser"
version = "0.1.0"
description = ""
authors = ["Kieran Lock"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
playwright = "^1.56.0"
requests = "^2.32.5"
pydantic = "^2.12.4"
genanki = "^0.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
